@@ -1,5 +1,6 @@
 package com.team_7.moment_film.domain.customframe.service;
 
+import com.team_7.moment_film.domain.customframe.dto.FrameMapper;
 import com.team_7.moment_film.domain.customframe.dto.FrameRequestDto;
 import com.team_7.moment_film.domain.customframe.dto.FrameResponseDto;
 import com.team_7.moment_film.domain.customframe.entity.Frame;
@@ -15,7 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,40 +23,29 @@ public class FrameService {
 
     private final FrameRepository frameRepository;
     private final S3Service s3Service;
-
+    private final FrameMapper frameMapper;
 
     public ResponseEntity<ApiResponse> createFrame(FrameRequestDto requestDto, MultipartFile image, User user) {
-        if(image==null && requestDto.getHue()==null &&
-                requestDto.getSaturation()==null && requestDto.getLightness()==null ){
+        if(image==null && isNullOrBlank(requestDto.getHue()) &&
+                isNullOrBlank(requestDto.getSaturation()) && isNullOrBlank(requestDto.getLightness())){
             throw new IllegalArgumentException("이미지나 값을 선택해주세요.");
         }
 
-        String imageUrl = s3Service.upload(image);
+        String imageUrl = s3Service.upload(image, "frame/");
         Frame frame = new Frame(requestDto, imageUrl, user);
         frameRepository.save(frame);
 
-        FrameResponseDto responseDto = FrameResponseDto.builder()
-                .id(frame.getId())
-                .frameName(frame.getFrameName())
-                .hue(frame.getHue())
-                .saturation(frame.getSaturation())
-                .lightness(frame.getLightness())
-                .image(frame.getImage())
-                .build();
+        FrameResponseDto responseDto = frameMapper.toDto(frame);
 
         ApiResponse apiResponse = ApiResponse.builder().status(HttpStatus.CREATED).data(responseDto).build();
         return ResponseEntity.status(HttpStatus.CREATED).body(apiResponse);
     }
 
-    public ResponseEntity<ApiResponse> getAllFrame() {
-        List<FrameResponseDto> frameList = frameRepository.findAll().stream().map(frame -> FrameResponseDto.builder()
+    public ResponseEntity<ApiResponse> getAllMyFrame(User user) {
+        List<FrameResponseDto> frameList = frameRepository.findAllByUserId(user.getId()).stream().map(frame -> FrameResponseDto.builder()
                 .id(frame.getId())
                 .frameName(frame.getFrameName())
-                .hue(frame.getHue())
-                .saturation(frame.getSaturation())
-                .lightness(frame.getLightness())
-                .image(frame.getImage())
-                .build()).collect(Collectors.toList());
+                .build()).toList();
         ApiResponse apiResponse = ApiResponse.builder().status(HttpStatus.OK).data(frameList).build();
         return ResponseEntity.ok(apiResponse);
     }
@@ -64,14 +53,7 @@ public class FrameService {
     public ResponseEntity<ApiResponse> selectFrame(Long frameId) {
         Frame frame = frameRepository.findById(frameId).orElseThrow(() ->
                 new EntityNotFoundException("존재하지 않는 프레임입니다."));
-        FrameResponseDto responseDto = FrameResponseDto.builder()
-                .id(frame.getId())
-                .frameName(frame.getFrameName())
-                .hue(frame.getHue())
-                .saturation(frame.getSaturation())
-                .lightness(frame.getLightness())
-                .image(frame.getImage())
-                .build();
+        FrameResponseDto responseDto = frameMapper.toDto(frame);
         ApiResponse apiResponse = ApiResponse.builder().status(HttpStatus.OK).data(responseDto).build();
         return ResponseEntity.ok(apiResponse);
     }
@@ -85,5 +67,9 @@ public class FrameService {
         frameRepository.delete(frame);
         ApiResponse apiResponse = ApiResponse.builder().status(HttpStatus.OK).msg("프레임 삭제 완료").build();
         return ResponseEntity.ok(apiResponse);
+    }
+
+    private boolean isNullOrBlank(String value){
+        return value == null || value.isBlank();
     }
 }
